media assets: fix image shifting while page is loading.
Fix the image moving after initially loading on the media asset show page. Keep the image hidden
until the Javascript runs and initializes the image's max-height.

--- a/app/components/media_asset_component/media_asset_component.scss
+++ b/app/components/media_asset_component/media_asset_component.scss
@@ -19,6 +19,10 @@
     }
   }
 
+  &[data-dynamic-height="true"]:not([data-dynamic-height-initialized="true"]) {
+    visibility: hidden;
+  }
+
   .media-asset-paginator {
     top: calc((100% - var(--paginator-size)) / 2);
     height: 0;
